--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -73,6 +73,7 @@
                     right: -25px;
                     top: 0;
                 }
+                img,
                 svg {
                     margin-right: 12px;
                 }
