--- a/src/blocks/modules/footer/footer.scss
+++ b/src/blocks/modules/footer/footer.scss
@@ -264,3 +264,35 @@ nav.woocommerce-breadcrumb {
         }
     }
 }
+.woof_sid_auto_shortcode {
+    padding: 0 !important;
+    border-width: 0;
+    border-radius: 0;
+    box-shadow: none;
+    background-color: $white-color;
+    margin-bottom: 0;
+}
+.woocommerce-ordering {
+    select {
+        width: 100%;
+    }
+}
+.added_to_cart,
+.woof_products_top_panel,
+#woof_results_by_ajax .woocommerce-ordering,
+.woocommerce-result-count {
+    display: none !important;
+}
+.woocommerce {
+    ul.products {
+        &::after,
+        &::before {
+            content: none;
+        }
+        li.product {
+            a img {
+                margin: 0;
+            }
+        }
+    }
+}
