--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -26,7 +26,7 @@ body {
     margin: 0 auto;
     padding: 0 20px;
     @include to($mobile) {
-        padding: 0 10px;
+        padding: 0;
     }
 }
 
