--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -17,10 +17,18 @@
     font-display: swap;
 }
 @font-face {
+    font-family: "RobotoCondensed-Light", sans-serif;
+    src: url("../fonts/Roboto_Condensed/RobotoCondensed-Light.ttf") format("ttf");
+    src: url("../fonts/Roboto_Condensed/RobotoCondensed-Light.woff") format("woff");
+    src: url("../fonts/Roboto_Condensed/RobotoCondensed-Light.woff2") format("woff2");
+    
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
     font-family: "BankGothic";
     src: url("../fonts/BankGothic/BankGothic.woff") format("woff");
     src: url("../fonts/BankGothic/BankGothic.woff2") format("woff2");
-    font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
