--- a/src/blocks/modules/pages/shop.scss
+++ b/src/blocks/modules/pages/shop.scss
@@ -81,6 +81,7 @@
         }
         &-about {
             margin-bottom: 50px;
+            width: 100%;
             ul {
                 display: flex;
                 justify-content: space-between;
