--- a/src/blocks/modules/pages/product.scss
+++ b/src/blocks/modules/pages/product.scss
@@ -1,14 +1,21 @@
 @import "main-bx";
 
 div.product {
-    display: grid;
-    grid-template-areas:
-        "img summary"
-        "tabs tabs"
-        "related related";
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 30px 20px;
+    @include flex;
+    justify-content: space-between;
     width: 100%;
+    position: relative;
+    .onsale {
+        position: absolute;
+        left: 0;
+        top: 0;
+        background-color: $dark_red_color;
+        font-size: 16px;
+        color: $white-color;
+        text-align: center;
+        padding: 5px 10px;
+        z-index: 1;
+    }
     a {
         color: $blue-color;
         &:hover {
@@ -19,273 +26,152 @@ div.product {
         display: block;
         grid-template-areas:
             "img"
-            "summary"
-            "tabs"
-            "related";
+            "summary";
         grid-template-columns: 1fr;
+    }
+    &__top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 18px;
+        margin-top: 65px;
+        font-size: 16px;
+        color: $grey-color;
+        &-left {
+            a {
+                color: $grey-color;
+                display: inline-block;
+                position: relative;
+                @include transition;
+                &::before {
+                    content: "<";
+                    margin-right: 5px;
+                }
+                &:hover {
+                    color: $orange-color;
+                }
+            }
+        }
+    }
+    .main__bottom-about {
+        margin-top: 50px;
+    }
+    &__description {
+        &--top {
+            width: 100%;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-gap: 24px;
+            margin-bottom: 65px;
+            .item {
+                padding: 20px;
+                width: 100%;
+                max-width: 375px;
+                border: 1px solid #f1f0ea;
+                min-height: 171px;
+                h4 {
+                    margin-bottom: 17px;
+                    color: $orange-color;
+                    text-transform: uppercase;
+                }
+            }
+        }
+        &--bottom {
+            width: 100%;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: 60px;
+            margin-bottom: 65px;
+            position: relative;
+            color: $white-color;
+            padding: 30px 0;
+            &::after {
+                content: "";
+                background-color: $orange-color;
+                left: -200%;
+                top: 0;
+                width: 1000%;
+                height: 100%;
+                position: absolute;
+                z-index: -1;
+            }
+            .item {
+                border-bottom: 1px solid $white-color;
+                padding: 10px 0;
+                padding-left: 13px;
+                display: flex;
+                justify-content: space-between;
+                span {
+                    display: inline-block;
+                    flex: 0 0 50%;
+                    &:nth-child(2) {
+                        text-align: left;
+                    }
+                }
+            }
+        }
     }
 }
 .related {
+    width: 100%;
     grid-area: related;
-}
-.woocommerce-tabs {
-    grid-area: tabs;
-    @include to($mobile) {
-        margin-top: 30px;
-    }
-    .tabs {
-        display: flex;
-        @include to($mobile) {
-            flex-direction: column;
-        }
-        li {
-            font-size: 1.3em;
-            margin-right: 0.9375rem;
-            margin-bottom: 0;
-            position: relative;
-            &::after {
-                content: "";
-                width: 10000%;
-                display: block;
-                position: absolute;
-                height: 5px;
-                bottom: -5px;
-                left: -500%;
-            }
-            @include to($mobile) {
-                font-size: 1em;
-                margin-right: 0;
-                &::after {
-                    content: none;
-                }
-            }
-            a {
-                display: block;
-                color: $white-color;
-                padding: 0.85em 1em;
-                background-color: $blue-color;
-                &:hover {
-                    color: $white-color;
-                }
-            }
-            &.description_tab {
-                a {
-                    background-color: $blue-color;
-                }
-                &.active {
-                    &::after {
-                        background-color: $blue-color;
-                    }
-                }
-            }
-            &.zubehor_tab {
-                a {
-                    background-color: rgb(88, 140, 192);
-                    &:hover {
-                        background-color: rgb(63, 115, 166);
-                    }
-                }
-                &.active {
-                    &::after {
-                        background-color: rgb(63, 115, 166);
-                    }
-                }
-            }
-            &.tdm_tab {
-                a {
-                    background-color: rgb(230, 230, 230);
-                    color: $grey-color;
-                    padding-left: 2.5em;
-                    @include to($mobile) {
-                        padding-left: 2em;
-                    }
-                    &:hover {
-                        background-color: $grey-color;
-                        color: $white-color;
-                    }
-                }
-                &.active {
-                    &::after {
-                        background-color: $grey-color;
-                    }
-                    a {
-                        background-color: $grey-color;
-                        color: $white-color;
-                    }
-                    &::before {
-                        color: $white-color;
-                    }
-                }
-                &::before {
-                    content: "\EA19";
-                    position: absolute;
-                    left: 20px;
-                    top: 50%;
-                    transform: translateY(-50%);
-                    font-family: "icon";
-                    display: inline-block;
-                    vertical-align: middle;
-                    line-height: 1;
-                    font-weight: normal;
-                    font-style: normal;
-                    speak: none;
-                    text-decoration: inherit;
-                    text-transform: none;
-                    @include to($mobile) {
-                        left: 10px;
-                    }
-                }
-                &:hover {
-                    &::before {
-                        color: $white-color;
-                    }
-                }
-            }
+    ul {
+        grid-template-columns: repeat(4, 1fr) !important;
+        .shipping_de.shipping_de_string {
+            display: none;
         }
     }
-
-    .woocommerce-Tabs-panel {
-        padding-top: 2.8125rem;
-        &--description {
-            width: 80%;
+    h2 {
+        padding-top: 30px;
+        padding-bottom: 30px;
+        position: relative;
+        font-size: 43px;
+        line-height: 1.2;
+        font-family: $font-bold;
+        max-width: 845px;
+        width: 100%;
+        text-align: center;
+        margin: 45px auto;
+        text-transform: uppercase;
+        span {
+            color: $orange-color;
         }
-        @include to($mobile) {
-            padding-top: 2em;
-            &--description {
-                width: 100%;
-                img {
-                    object-fit: none;
-                }
-            }
-            img {
-                width: 100%;
-                height: 100%;
-                margin: 0 auto 20px !important;
-            }
+        &::after,
+        &::before {
+            content: "";
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: $orange-color;
+            width: 83px;
+            height: 3px;
         }
-    }
-    .product-tdm-tab__file {
-        margin-bottom: 1.875rem;
-        a {
-            display: block;
-            font-size: 2em;
-            background-color: $grey__bg;
-            margin-bottom: 0;
-            padding: 1.875rem;
-            padding-left: 4em;
-            color: $white-color;
-            position: relative;
-            width: fit-content;
-            color: $grey-color;
-            @include transition;
-            &:hover {
-                color: $white-color;
-                background-color: $grey-color;
-            }
-            &::before {
-                content: "\EA1A";
-                position: absolute;
-                left: 1.875rem;
-                top: 50%;
-                transform: translateY(-50%);
-                font-family: "icon";
-                display: inline-block;
-                vertical-align: middle;
-                line-height: 1;
-                font-weight: normal;
-                font-style: normal;
-                speak: none;
-                text-decoration: inherit;
-                text-transform: none;
-                color: rgb(212, 88, 88);
-                font-size: 2em;
-            }
-            @include to($mobile) {
-                width: 100%;
-                padding: 1.5rem;
-                padding-left: 5em;
-                font-size: 1.25em;
-            }
+        &::before {
+            top: 0;
+        }
+        &::after {
+            bottom: 0;
         }
     }
 }
 .summary.entry-summary {
     grid-area: summary;
     width: 100%;
+    max-width: 620px;
+    min-height: 500px;
+    // border: 1px solid $grey-color;
     h1 {
-        font-size: 1.9375rem;
         width: 100%;
-    }
-    .price {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        color: $white-color;
-        background-color: $green-color;
-        font-size: 1.6em;
-        line-height: 1;
-        font-weight: bold;
-        padding: 0.5em;
-        margin: 0 auto;
-        width: 60%;
-        @include to($mobile) {
-            width: 100%;
-            font-size: 1.125em;
-            justify-content: center;
-            flex-direction: row;
-        }
-    }
-    .legal-price-info {
-        color: $white-color;
-        background-color: $green-color;
-        width: 60%;
-        font-size: 1em;
-        font-weight: normal;
-        text-align: center;
-        padding: 0.5em;
-        margin: 0 auto;
-        @include to($mobile) {
-            width: 100%;
-            margin-bottom: 20px;
-        }
-        .wc-gzd-additional-info {
-            margin-bottom: 0 !important;
-            word-break: break-word;
-            a {
-                color: $white-color;
-                &:hover {
-                    color: $white-color;
-                }
-            }
-        }
-        a {
-            color: $white-color;
-            &:hover {
-                color: $white-color;
-            }
-        }
+        font-family: $font-bold;
+        text-transform: uppercase;
+        font-size: 35px;
+        margin-bottom: 22px;
     }
     .woocommerce-product-details__short-description {
         ul {
             margin: 1.5em 0 0;
             li {
                 line-height: 2em;
-                &:before {
-                    content: "\EA05";
-                    color: $green-color;
-                    font-size: 1.5em;
-                    margin-top: -0.0625rem;
-                    padding-right: 0.625rem;
-                    font-family: "icon";
-                    display: inline-block;
-                    vertical-align: middle;
-                    line-height: 1;
-                    font-weight: normal;
-                    font-style: normal;
-                    speak: none;
-                    text-decoration: inherit;
-                    text-transform: none;
-                }
             }
         }
     }
@@ -341,98 +227,57 @@ div.product {
         input {
             display: block;
             width: 100%;
-            max-width: calc(360px / 2);
-            padding: 0.5rem;
-            border: 1px solid $orange-color;
             border-radius: 0;
             background-color: $white-color;
             font-family: inherit;
-            font-size: 1.4em;
             font-weight: normal;
             color: $orange-color;
             cursor: pointer;
-            padding-left: 5em;
-            margin-left: auto;
             @include to($mobile) {
                 max-width: 100%;
             }
         }
-        &::before {
-            color: $orange-color;
-            content: "Menge:";
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            right: 90px;
-            font-size: 1.4em;
-        }
     }
     .single_add_to_cart_button {
         position: relative;
-        font-size: 2em;
-        text-align: right;
-        background-color: $blue-color;
+        background-color: $orange-color;
+        border: 1px solid $orange-color;
         cursor: pointer;
-        padding: 0.85em 1em 0.85em 2.5em;
+        padding: 13px 50px 13px 15px;
         margin: 1rem 0;
         line-height: 1;
         color: $white-color;
         display: block;
         margin-left: auto;
+        font-size: 20px;
         @include transition;
-
         &:hover {
-            background-color: $blue_hover-color;
-        }
-        &::before {
-            position: absolute;
-            left: 15px;
-            top: 50%;
-            transform: translateY(-50%);
-            content: "\EA1C";
-            color: $white-color;
-            font-size: 1.5em;
-            margin-top: -0.0625rem;
-            padding-right: 0.625rem;
-            font-family: "icon";
-            display: inline-block;
-            vertical-align: middle;
-            line-height: 1;
-            font-weight: normal;
-            font-style: normal;
-            speak: none;
-            text-decoration: inherit;
-            text-transform: none;
+            background-color: $white-color;
+            color: $orange-color;
         }
         @include to($mobile) {
             font-size: 1em;
             white-space: nowrap;
             width: 100%;
-            padding: 0.85em 0.5em 0.85em 2em;
-            &::before {
-                left: 5px;
-            }
         }
     }
 }
 .woocommerce-product-gallery {
     grid-area: img;
     width: 100%;
+    max-width: 506px;
     position: relative;
     display: grid;
     grid-template-areas:
         "sliderTop"
-        "sliderBottom"
-        "cont";
+        "sliderBottom";
     grid-template-rows: 0fr 0fr 0fr;
-    &__image {
-        @include to($mobile) {
-        }
-    }
+    min-height: 500px;
+    border: 1px solid $grey-color;
     &__trigger {
         position: absolute;
         display: block;
-        left: 5px;
+        left: 100%;
         top: 5px;
         z-index: 1;
         width: 20px;
@@ -440,44 +285,8 @@ div.product {
         text-align: center;
         &::after {
             content: "";
-            color: $blue-color;
-            font-weight: bold;
-        }
-    }
-    .product-bottom-cont {
-        grid-area: cont;
-        margin: 2em 0 0;
-        font-size: 1.2em;
-        &__text {
-            text-align: end;
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            padding-right: 20px;
-            margin: 0 0 20px;
-            p {
-                margin-bottom: 0;
-            }
-        }
-        .text-green {
-            color: $green-color;
-        }
-        .text-orange {
             color: $orange-color;
-        }
-        .icon {
-            color: $green-color;
-            font-size: 4.5em;
-            transform: scalex(-1);
-            margin-left: 20px;
-            &::before {
-                content: "\EA0F";
-            }
-        }
-        &__img {
-            display: block;
-            width: 100%;
-            padding-right: 20px;
+            font-weight: bold;
         }
     }
     .flex-viewport {
@@ -514,33 +323,6 @@ div.product {
         }
     }
 }
-
 .pswp__bg {
     opacity: 0.7 !important;
-}
-.tx-cart__totop {
-    a {
-        background-color: #004f9f;
-        color: $white-color !important;
-        width: 100%;
-        padding: 0.9375rem 1.875rem;
-        display: inline-block;
-        text-align: center;
-        font-weight: bold;
-        opacity: 0.8;
-        font-size: 1.3em;
-        @include transition;
-        &:hover {
-            background-color: $blue_hover-color;
-        }
-    }
-    .icon {
-        font-size: 1.8em;
-        margin-left: 0.625rem;
-        margin-right: 0.625rem;
-        margin-top: -0.375rem;
-        &::before {
-            content: "\EA12";
-        }
-    }
 }
