--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -1,6 +1,6 @@
 $font-normal: "RobotoCondensed-Regular";
 $font-bold: "RobotoCondensed-Bold";
-$font-light: "RobotoCondensed-Light", sans-serif;
+$font-light: "Condensed-Light", sans-serif;
 $font-BankGothic: "BankGothic";
 
 // color
