--- a/src/blocks/modules/main__content/main__content.scss
+++ b/src/blocks/modules/main__content/main__content.scss
@@ -75,9 +75,10 @@
                 p {
                     font-size: 30px;
                     font-family: $font-bold;
-                }
-                span {
-                    font-size: 47px;
+                    &:last-child {
+                        font-size: 47px;
+                        font-family: $font-normal;
+                    }
                 }
             }
             &--bottom {
@@ -168,21 +169,22 @@
                 padding-left: 45px;
                 &::after,
                 &::before {
-                    content: "";
+                    content: "_";
                     position: absolute;
-                    border-top: 1px solid $black-color;
-                    width: 11px;
-                    height: 11px;
+                    right: 0px;
+                    width: 20px;
+                    height: 20px;
                     z-index: 1;
                     cursor: pointer;
+                    font-size: 28px;
+                    line-height: 0;
                 }
                 &::after {
-                    right: 10px;
-                    top: 32px;
+                    padding-left: 3px;
+                    top: 24px;
                 }
                 &::before {
-                    right: 15px;
-                    top: 27px;
+                    top: 30px;
                     transform: rotate(90deg);
                     @include transition;
                 }
@@ -192,7 +194,7 @@
                     }
                 }
                 li {
-                    padding: 8px 0;
+                    padding: 4px 0;
                     display: none;
                     border-bottom: none;
                     a {
