--- a/src/blocks/modules/pages/shop.scss
+++ b/src/blocks/modules/pages/shop.scss
@@ -260,12 +260,6 @@
             right: unset;
             left: 0;
         }
-        &:hover {
-            .tinv-wraper.tinv-wishlist {
-                opacity: 1;
-                visibility: visible;
-            }
-        }
     }
     &-name {
         font-size: 18px;
@@ -397,6 +391,35 @@
                     }
                 }
             }
+        }
+    }
+    &:hover {
+        .tinv-wraper.tinv-wishlist {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+    // wishlist
+    .tinv-wraper.tinv-wishlist {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 53%;
+        @include transition;
+        background-color: rgba(255, 255, 255, 0.308);
+        opacity: 0;
+        visibility: hidden;
+        z-index: 1;
+        .tinvwl_add_to_wishlist_button {
+            display: block;
+            width: 80%;
+            background-color: $orange-color;
+            color: $white-color;
+            font-size: 16px;
+            padding: 12px 0;
+            margin: 5em auto 0 !important;
+            text-align: center;
         }
     }
 }
@@ -534,26 +557,12 @@
         }
     }
 }
-// wishlist
-.tinv-wraper.tinv-wishlist {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 53%;
-    @include transition;
-    background-color: rgba(255, 255, 255, 0.308);
-    opacity: 0;
-    visibility: hidden;
-    z-index: 1;
-    .tinvwl_add_to_wishlist_button {
-        display: block;
-        width: 80%;
-        background-color: $orange-color;
-        color: $white-color;
-        font-size: 16px;
-        padding: 12px 0;
-        margin: 5em auto 0 !important;
-        text-align: center;
-    }
+
+#ajaxsearchlite1 .probox .proinput input,
+div.asl_w .probox .proinput input {
+    font-size: 16px !important;
+    color: $black-color !important;
+}
+div.asl_m.asl_w {
+    padding: 10px 0;
 }
