--- a/src/blocks/modules/pages/product.scss
+++ b/src/blocks/modules/pages/product.scss
@@ -166,39 +166,37 @@ div.product {
         font-size: 35px;
         margin-bottom: 22px;
     }
-    .product__description {
-        &-top {
-            font-family: $font-light;
-            position: relative;
-            padding: 20px 0;
-            margin-bottom: 38px;
-            &::after,
-            &::before {
-                content: "";
-                background-color: $orange-color;
-                width: 80px;
-                height: 3px;
-                position: absolute;
-                left: 0;
-            }
-            &::after {
-                bottom: 0;
-            }
-            &::before {
-                top: 0;
-            }
+    h3 {
+        font-family: $font-light;
+        position: relative;
+        padding: 20px 0;
+        margin-bottom: 38px;
+        &::after,
+        &::before {
+            content: "";
+            background-color: $orange-color;
+            width: 80px;
+            height: 3px;
+            position: absolute;
+            left: 0;
         }
-        &-bottom {
-            padding-left: 40px;
-            margin-bottom: 30px;
-            li {
-                position: relative;
-                margin-bottom: 10px;
-                &::before {
-                    content: url(../img/awesome/check.png);
-                    position: absolute;
-                    left: -40px;
-                }
+        &::after {
+            bottom: 0;
+        }
+        &::before {
+            top: 0;
+        }
+    }
+    ul {
+        padding-left: 40px;
+        margin-bottom: 30px;
+        li {
+            position: relative;
+            margin-bottom: 10px;
+            &::before {
+                content: url(../img/awesome/check.png);
+                position: absolute;
+                left: -40px;
             }
         }
     }
